--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            Chao
 description:      "Nothing is really attained"
 logo:             moon-logo.png
-disqus_shortname: chaosma
+disqus_shortname:  chaosma
 # Assign a default image for your site's header and footer
 default_bg:       default_bg1.jpg
 search:           true
@@ -20,8 +20,7 @@ fin_color:        "255,255,255"
 # Change url to your domain. Leave localhost server or blank when working locally.
 # or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same 
 # whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''
-url:           "http://chaosma.github.io"	 	  
-baseurl:         ''
+url:           	 "http://chaosma.github.io"	  
 
 # Owner/author information
 owner:
@@ -72,7 +71,7 @@ paginate_path: "page:num"
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/Denver
 future:      true
-highlighter: pygments
+highlighter: rouge
 markdown:    kramdown
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
