--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description:      "Nothing is really attained"
 logo:             moon-logo.png
 disqus_shortname:  chaosma
 # Assign a default image for your site's header and footer
-default_bg:       default_bg1.jpg
+default_bg:       default_bg.jpg
 search:           true
 
 # share to social link such as twitter and facebook
