--- a/_config.yml
+++ b/_config.yml
@@ -25,12 +25,12 @@ url:      "http://chaosma.github.io"
 # Owner/author information
 owner:
   name:           Chao
-  avatar:         1.gif
+  avatar:         
   email:          mc8305@gmail.com
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   description:   
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        
+  twitter:        ohmygoddess2 
   facebook:       
   github:         chaosma
   stackexchange:  
