--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ fin_color:        "255,255,255"
 # Change url to your domain. Leave localhost server or blank when working locally.
 # or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same 
 # whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''
-url:      "http://chaosma.github.io"	  
+url:      "https://chaosma.github.io"	  
 
 # Owner/author information
 owner:
@@ -94,8 +94,8 @@ kramdown:
 
 prose:
   rooturl: '_posts'
-  siteurl: 'http://chaosma.github.io/'
-  relativeLinks: 'http://chaosma.github.io/links.jsonp'
+  siteurl: 'https://chaosma.github.io/'
+  relativeLinks: 'https://chaosma.github.io/links.jsonp'
   media: 'images'
   metadata:
     _posts:
