--- a/_config.yml
+++ b/_config.yml
@@ -25,12 +25,12 @@ url:      "https://chaosma.github.io"
 # Owner/author information
 owner:
   name:           Chao
-  avatar:         
+  avatar:         1.gif
   email:          mc8305@gmail.com
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   description:   
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        ohmygoddess2 
+  twitter:        chaosma000 
   facebook:       
   github:         chaosma
   stackexchange:  
@@ -64,7 +64,7 @@ links:
 #    url: /chao-ma
 
 # Chao added the following:
-gems : [jekyll-paginate]
+plugins: [jekyll-paginate]
 paginate:    7
 paginate_path: "page:num"
 
