--- a/_config.yml
+++ b/_config.yml
@@ -204,5 +204,5 @@ prose:
           label: "Comments"
           value: false
 
-include: [".htaccess"]
+include: [".htaccess",".well-known"]
 exclude: ["lib", "config.rb", "Gemfile", "Capfile", "Gemfile.lock", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
