fix liquid syntax error

--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ kramdown:
   toc_levels: 1..6
   enable_coderay: false
 
-  coderay:
+  syntax_highlighter_opts:
     coderay_line_numbers: 
     coderay_line_numbers_start: 1
     coderay_tab_width: 4
